added header and logo

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,9 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css'>
   </head>
+    <header>
+        <% include ../views/partials/header %>
+    </header>
   <body>
     <h1> test </h1>
     <p>Welcome to Gear Tracker!</p>
