--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>GA Express</title>
+<title>GearTracker</title>
 <!-- Bootstrap CSS (load from a CDN) -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <!-- jQuery (load from a CDN) -->
@@ -21,6 +21,7 @@ footer {
 
 </style>
 </head>
+<div class="navbar navbar-inverse navbar-static-top" id="nav">
+<a href="#" class="pull-left"><img src="images/logo_small.gif" class="logo"></a>
 <body>
-<h1>GA Express</h1>
 <div id="main">
