--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,6 +17,9 @@
         <div class='form-group'>
           <input type='password' name='password' placeholder='Enter Password'>
         </div>
+        <div class='form-group'>
+          <input type='text' name='name' placeholder='Enter Full Name Here'>
+        </div>
         <input type='submit' value='Register'>
         <a href='/'>Cancel</a>
       </form>
