--- a/views/pong.ejs
+++ b/views/pong.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Gear Tracker </title>
+    <title> GearTracker </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css'>
   </head>
   <body>
-    <h1> test </h1>
+    <h1> Rock On! </h1>
     <p>Welcome to Gear Tracker!</p>
 
 
