--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,8 +6,10 @@
 <title>GearTracker</title>
 <!-- Bootstrap CSS (load from a CDN) -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel='stylesheet' href='/stylesheets/style.css' />
 <!-- jQuery (load from a CDN) -->
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+
 <style>
 
 #main {
