--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,20 +1,18 @@
 body {
   /*padding: 50px;*/
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin-top: 70px;
 }
 
 a {
   color: #00B7FF;
 }
 
-<<<<<<< HEAD
-#my-list button {
-	display: none;
-}
-=======
+
 #nav {
      width: 100%;
      position: absolute;
+     margin-bottom: 70px;
      top: 0;  
      }
->>>>>>> header_logo
+
