--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,17 +5,26 @@
         <% include ../views/partials/header %>
     </header>
   <body>
-    <h1> Welcome to Gear Tracker </h1>
-    <p>A mobile/tablet/laptop-friendly app that will track all your gear for every gig.</p>
-    <ul>
-    	<li>Create an account.</li>
-    	<li>Create a gear list.</li>
-    	<li>Add you tour dates and venue details.</li>
-    </ul><br>
-    <p>We created a fully responsive inventory tracking app. </p>
-    <p>You can monitor the date/time your gear is checked into the venue location and when it is loaded back on the truck. </p>
-    <p>You can also note the condition of the equipment at any time.</p>	
+    <% if (!user) { %>
+      <div class="page_copy">
+        <h1> Welcome to Gear Tracker </h1>
+        <p>A mobile/tablet/laptop-friendly app that will track all your gear for every gig.</p>
+      </div>  
+      
+      <div class="list">  
+        <ul>
+        	<li>Create an account.</li>
+        	<li>Create a gear list.</li>
+        	<li>Add you tour dates and venue details.</li>
+        </ul><br>
+      </div>
 
+      <div class="page_copy">
+        <p>We created a fully responsive inventory tracking app.
+        You can monitor the date/time your gear is checked into the venue location and when it is loaded back on the truck.
+        You can also note the condition of the equipment at any time.</p>
+      </div>  	
+    <% } %>
    
 
 	<div class="col-md-6">
