--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title> GearTracker </title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css'
+    <link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='/stylesheets/style.css'>
   </head>
   <body>
     
