failing on POST request to database

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
     		<a href="/logout">Logout</a>
 
 			<% instruments.forEach( function( instrument ) { %>
-    			<h6 class="globalList"><%= instrument.type %> <%= instrument.model %> <button class="add">add to user list</button></h6>
+    			<li class="globalList"><%= instrument.type %><%= instrument.model %><button class="add">add to user list</button></li>
     		<% }); %>
     	<% } %>
     </div>
@@ -39,6 +39,11 @@
 		</ul>
 		<button class="finalize">Submit List</button>
 		<br>
+
+		<form action="/usercreationlist" method="POST">
+			<input id="push-it-real-good" type="hidden" name="gearlisty">
+		</form>
+
 		<span class="show_array"></span>
     </div>
 
@@ -47,9 +52,14 @@
 
    <script>
 	   $(function() {
-			$(document).on('click', '.add', function() {
+			$('.add').on('click', function() {
 				$(this).parent().removeClass("globalList").addClass("personalList");
 	        	$(this).parent().appendTo("#my-list");
+	        	// $(this).parent().appendTo("#push-it-real-good");
+	        	// var pushit = $("#push-it-real-good").val();
+	        	// console.log(pushit)
+
+
 	        	$(this).remove();
 	    	});
 	    });
@@ -58,29 +68,26 @@
 	<script>
 		$(function() {
 			$('.finalize').on('click', function() {
+
    				//declare an array
 				var myGearList = new Array();
+				$(".show_array").html(' ');
 
 				$('.personalList').each(function(){
-					var splititup =  
 		   			myGearList.push($(this).text());
 		   		});
 
+		   		myGearList = myGearList.toString();
+
 		   		$.ajax({
-				  type: 'POST',
-				  url: "/usercreationlist",
-				  data: myGearList,
-				  success: function(i){
-				  	console.log(myGearList);
-				  	$('#i').html(i);
-				  }
+					type: 'POST',
+					url: '/usercreationlist',
+					data: { userlist: myGearList
+					},
+					done: function(data){
+						console.log(data)
+					}
 				});
-
-
-
-		   		for (var i = 0; i < myGearList.length; i++) {
-    				$(".show_array").append('<span>' + myGearList[i] + ', ' + '</span>');
-				};
 			});
 		});
 	</script> 
