--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -72,7 +72,7 @@ form {
 
 #nav {
      width: 100%;
-     position: absolute;
+     position: fixed;
      margin-bottom: 70px;
      top: 0;  
      }
