--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
     </div>
     <h1>Step 2</h1>
     <h3>Submit you list</h3>
-      <div class="col-md-6">
+    <!--   <div class="col-md-6">
   		<h4>My personal list</h4>
   		<ul id="my-list">
   		</ul>
@@ -51,9 +51,42 @@
   		<br>
   		<span class="show_array"></span>
   <% } %>
-      </div>
+      </div> -->
 
     <div class="col-md-6">
+    <!--   ADD MY LIST TO TABLE -->
+       <table class="table table-hover table-bordered">
+    <thead class="thead-inverse">
+          <tr>
+            <th>#</th>
+            <th>Type</th>
+            <th>Model</th>
+            <th>Issues</th>
+          </tr>
+    </thead>
+    <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td id="my-list"></td>
+            <td></td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td></td>
+            <td></td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Larry</td>
+            <td>the Bird</td>
+            <td>@twitter</td>
+          </tr>
+   </tbody>
+  </table> 
+
+
 		<h4>My personal list</h4>
 		<ul id="my-list">
 		</ul>
