--- a/views/pong.ejs
+++ b/views/pong.ejs
@@ -25,4 +25,4 @@
    <script src='http://code.jquery.com/jquery.js'></script>
    <script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js'></script>
   </body>
-</html>
+</html>in
