--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,9 +14,9 @@
         
         <div class="list">  
           <ul>
-          	<li class="li">Create an account.</li>
-          	<li>Create a gear list.</li>
-          	<li>Add you tour dates and venue details.</li>
+            <li class="li">Create an account.</li>
+            <li>Create a gear list.</li>
+            <li>Add you tour dates and venue details.</li>
           </ul><br>
         </div>
 
@@ -24,94 +24,123 @@
           <p>We created a fully responsive inventory tracking app. </p>
           <p>You can monitor the date/time your gear is checked into the venue location and when it is loaded back on the truck. </p><br>
           <p>You can also note the condition of the equipment at any time.</p>
-        </div>  	
+        </div>    
       <% } %>
      
 
-  	<div class="col-md-6">
-      	<% if (user) { %>
+    <div class="col-md-6">
+        <% if (user) { %>
         <h1>Step 1</h1>
         <h3>Select your instruments</h3>
-      		<p>You are currently logged in as <%= user.username %></p>
-      		
+          <p>You are currently logged in as <%= user.username %></p>
+          
 
-  			<% instruments.forEach( function( instrument ) { %>
-      			<h6 class="globalList"><%= instrument.type %> <%= instrument.model %> <button class="add">add to user list</button></h6>
-      		<% }); %>
+        <% instruments.forEach( function( instrument ) { %>
+            <h6 class="globalList"><%= instrument.type %> <%= instrument.model %> <button class="add">add to user list</button></h6>
+          <% }); %>
 
     </div>
     <h1>Step 2</h1>
     <h3>Submit you list</h3>
-      <div class="col-md-6">
-  		<h4>My personal list</h4>
-  		<ul id="my-list">
-  		</ul>
-  		<button class="finalize">Submit List</button>
+    <!--   <div class="col-md-6">
+      <h4>My personal list</h4>
+      <ul id="my-list">
+      </ul>
+      <button class="finalize">Submit List</button>
 
-  		<br>
-  		<span class="show_array"></span>
-<<<<<<< HEAD
+      <br>
+      <span class="show_array"></span>
   <% } %>
+
       </div> -->
-=======
- 
->>>>>>> 0b179c13feac572163cbe74c488a130db96ab69e
       </div>
-  <% if (user) { %>
+
     <div class="col-md-6">
-		<h4>My personal list</h4>
-		<ul id="my-list">
-		</ul>
-		<button class="finalize">Submit List</button>
-		<br>
+    <!--   ADD MY LIST TO TABLE -->
+       <table class="table table-hover table-bordered">
+    <thead class="thead-inverse">
+          <tr>
+            <th>#</th>
+            <th>Type</th>
+            <th>Model</th>
+            <th>Issues</th>
+          </tr>
+    </thead>
+    <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td id="my-list"></td>
+            <td></td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td></td>
+            <td></td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Larry</td>
+            <td>the Bird</td>
+            <td>@twitter</td>
+          </tr>
+   </tbody>
+  </table> 
 
-		<form action="/usercreationlist" method="POST">
-			<input id="push-it-real-good" type="hidden" name="gearlisty">
-		</form>
 
-		<span class="show_array"></span>
-    
+    <h4>My personal list</h4>
+    <ul id="my-list">
+    </ul>
+    <button class="finalize">Submit List</button>
+    <br>
+
+    <form action="/usercreationlist" method="POST">
+      <input id="push-it-real-good" type="hidden" name="gearlisty">
+    </form>
+
+    <span class="show_array"></span>
     </div>
 
      <script src='http://code.jquery.com/jquery.js'></script>
      <script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js'></script>
 
    <script>
-	   $(function() {
-			$('.add').on('click', function() {
-				$(this).parent().removeClass("globalList").addClass("personalList");
-	        	$(this).parent().appendTo("#my-list");
-	        	$(this).remove();
-	    	});
-	    });
+     $(function() {
+      $('.add').on('click', function() {
+        $(this).parent().removeClass("globalList").addClass("personalList");
+            $(this).parent().appendTo("#my-list");
+            $(this).remove();
+        });
+      });
    </script>
 
-	<script>
-		$(function() {
-			$('.finalize').on('click', function() {
+  <script>
+    $(function() {
+      $('.finalize').on('click', function() {
 
-   				//declare an array
-				var myGearList = new Array();
-				$(".show_array").html(' ');
+          //declare an array
+        var myGearList = new Array();
+        $(".show_array").html(' ');
 
-				$('.personalList').each(function(){
-		   			myGearList.push($(this).text());
-		   		});
+        $('.personalList').each(function(){
+            myGearList.push($(this).text());
+          });
 
-		   		myGearList = myGearList.toString();
+          myGearList = myGearList.toString();
 
-		   		$.ajax({
-					type: 'POST',
-					url: '/usercreationlist',
-					data: { userlist: myGearList
-					},
-					done: function(data){
-						console.log(data)
-					}
-				});
-			});
-		});
-	</script> 
+          $.ajax({
+          type: 'POST',
+          url: '/usercreationlist',
+          data: { userlist: myGearList
+          },
+          done: function(data){
+            console.log(data)
+          }
+        });
+      });
+    });
+  </script> 
 
   </div>
   </body>
