--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -88,3 +88,10 @@ form {
 	border-radius: 4px;
 	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
+
+.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+  background-color: #009241;
+  
+}
+
+
