adding responsiveness, media and boostrap utilities

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,13 +12,13 @@
           <p>A mobile/tablet/laptop-friendly app that will track all your gear for every gig.</p>
         </div>  
         
-        <div class="list">  
-          <ul>
+        
+          <ul class="pull-center">
             <li class="li">Create an account.</li>
             <li>Create a gear list.</li>
             <li>Add you tour dates and venue details.</li>
           </ul><br>
-        </div>
+  
 
         <div class="page_copy">
           <p>We created a fully responsive inventory tracking app. </p>
