--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,51 +1,52 @@
 <!-- /views/partials/header.ejs -->
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>GearTracker</title>
-<!-- Bootstrap CSS (load from a CDN) -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<link rel='stylesheet' href='/stylesheets/style.css' />
-<!-- jQuery (load from a CDN) -->
-<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<head>
+		<meta charset="UTF-8">
+	<title>GearTracker</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Bootstrap CSS (load from a CDN) -->
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+		<link rel='stylesheet' href='/stylesheets/style.css' />
+	<!-- jQuery (load from a CDN) -->
+		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
 
-<style>
+		<style>
 
-#main {
-    margin: 30px;
-}
+		#main {
+		    margin: 30px;
+		}
 
-footer {
-    font-size: 80%;
-    color: gray;
-}
+		footer {
+		    font-size: 80%;
+		    color: gray;
+		}
 
-</style>
-</head>
-<div class="navbar navbar-inverse navbar-fixed-top" id="nav">
-	<div class="logo">
-		<a href="#" class="pull-left"><img src="images/logo_small.gif" class="logo"></a>
-	</div>	
-		<% if (!locals.user) { %>
-			<div id="logreg">
-				<form action="/register">
-				    <input type="submit" value="Register" class="logout">
-				</form>
-				<form action="/login">
-				    <input type="submit" value="Log In" class="logout">
-				</form>
-			</div>
-		<% } %>
+		</style>
+	</head>
+	<div class="navbar navbar-inverse navbar-fixed-top" id="nav">
+		<div class="logo">
+			<a href="#" class="pull-left"><img src="images/logo_small.gif" class="logo"></a>
+		</div>	
+			<% if (!locals.user) { %>
+				<div id="logreg visible-lg-*">
+					<form action="/register">
+					    <input type="submit" value="Register" class="logout">
+					</form>
+					<form action="/login">
+					    <input type="submit" value="Log In" class="logout">
+					</form>
+				</div>
+			<% } %>
 
-<% if (locals.user) { %>
-	<div id="logreg">
-		<form action="/logout">
-		    <input type="submit" value="Log Out" class="logout">
-		</form>
+	<% if (locals.user) { %>
+		<div id="logreg">
+			<form action="/logout">
+			    <input type="submit" value="Log Out" class="logout">
+			</form>
+		</div>
+	<% } %>	
 	</div>
-<% } %>	
-</div>
-<body>
-<div id="main">
+	<body>
+	<div id="main">
