check-in/out started, js file created

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,6 +9,7 @@
 <link rel='stylesheet' href='/stylesheets/style.css' />
 <!-- jQuery (load from a CDN) -->
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="js/geartracker.js"></script>
 
 
 <style>
