--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-	<title>GearTracker</title>
+	<title>earTracker</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Bootstrap CSS (load from a CDN) -->
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -28,7 +28,7 @@
 	</head>
 	<div class="navbar navbar-inverse navbar-fixed-top" id="nav">
 		<div class="logo">
-			<a href="#" class="pull-left"><img src="images/logo_small.gif" class="logo"></a>
+			<a href="#" class="pull-left img-responsive"><img src="images/logo_small.gif" class="logo"></a>
 		</div>	
 			<% if (!locals.user) { %>
 				<div id="logreg visible-lg-*">
