--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,7 +28,7 @@
 	</head>
 	<div class="navbar navbar-inverse navbar-fixed-top" id="nav">
 		<div class="logo">
-			<a href="#" class="pull-left img-responsive"><img src="images/logo_small.gif" class="logo"></a>
+			<a href="#" class="pull-left"><img class='img-responsive'src="images/logo_small.gif" class="logo"></a>
 		</div>	
 			<% if (!locals.user) { %>
 				<div id="logreg visible-lg-*">
