added circle.yml and something else

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,9 +26,9 @@
 
 		</style>
 	</head>
-	<div class="navbar navbar-inverse navbar-fixed-top" id="nav">
+	<div class="navbar navbar-inverse navbar-fixed-top pull-right" id="nav">
 		<div class="logo">
-			<a href="#" class="pull-left"><img class='img-responsive'src="images/logo_small.gif" class="logo"></a>
+			<a href="#"><img class='img-responsive'src="images/logo_small.gif" class="logo"></a>
 		</div>	
 			<% if (!locals.user) { %>
 				<div id="logreg visible-lg-*">
