--- a/views/usercreationlist.ejs
+++ b/views/usercreationlist.ejs
@@ -9,7 +9,7 @@
 	<h1>This is the userlist page</h1>
 
 	<% userlists.forEach( function(userlist) { %>
-		<h6 class="globalList"><%= userlist %></h6>s
+		<h6 class="globalList"><%= userlist.userlist[0] %></h6>s
 	<% }); %>
 
 </body>
