--- a/views/usercreationlist.ejs
+++ b/views/usercreationlist.ejs
@@ -2,6 +2,7 @@
 <html>
     <header>
         <% include ../views/partials/header %>
+        <link rel='stylesheet' href='/stylesheets/emoji.css' />
     </header>
     <style>
 	h6 {
@@ -15,13 +16,24 @@
 
 <body>
 
-	<h1>This is the userlist page</h1>
+	<h1>User List 1</h1>
 
+	<div class="container">
 	<% userlists.forEach( function(userlist) { %>
 		<% userlist.userlist.forEach(function(gear) { %>
-			<h6 class="list-item"><%= gear %><button>Check-In</button> <button>Check-Out</button></h6>
+		<div class="col-md-4">
+			<h4 class="list-item"><%= gear %></h4>
+			<br>
+			<div class="emoji-toggle emoji-travel">
+			  <input type="checkbox" id="toggle2" class="toggle">
+			  <div class="emoji"></div>
+			  <label for="toggle2" class="well"></label>
+			</div>
+		</div>
 		<% }); %>
     <% }); %>
+</div>
+	
 
 </body>
 </html>
