--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -30,7 +30,7 @@ footer {
 		<a href="#" class="pull-left"><img src="images/logo_small.gif" class="logo"></a>
 	</div>	
 		<% if (!locals.user) { %>
-			<div id="logreg">
+			<div id="logreg testing">
 				<form action="/register">
 				    <input type="submit" value="Register" class="logout">
 				</form>
