if a tree falls in the woods..

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
         </div>  
         
         
-          <ul class="pull-center">
+          <ul class="page_copy">
             <li class="li">Create an account.</li>
             <li>Create a gear list.</li>
             <li>Add you tour dates and venue details.</li>
@@ -43,7 +43,7 @@
     <h1>Step 2</h1>
     <h3>Submit you list</h3>
     
-    <div class="col-md-6">
+    <div class="col-md-6 table-responsive">
     <!--   ADD MY LIST TO TABLE -->
        <table class="table table-hover table-bordered">
     	<thead class="thead-inverse">
@@ -51,7 +51,6 @@
             <th>#</th>
             <th>Type</th>
             <th>Model</th>
-            <th>Issues</th>
           </tr>
     	</thead>
    		 <tbody>
@@ -59,19 +58,16 @@
             <th scope="row">1</th>
             <td id="my-list"></td>
             <td></td>
-            <td>@mdo</td>
           </tr>
           <tr>
             <th scope="row">2</th>
             <td></td>
             <td></td>
-            <td>@fat</td>
           </tr>
           <tr>
             <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
+            <td></td>
+            <td></td>
           </tr>
    		</tbody>
   		</table> 
