--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title> GearTracker </title>
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css'>
     <link rel='stylesheet' href='/stylesheets/style.css'>
   </head>
