--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,7 +26,7 @@
 
 		</style>
 	</head>
-	<div class="navbar navbar-inverse navbar-fixed-top pull-right" id="nav">
+	<div class="navbar navbar-inverse navbar-fixed-top" id="nav">
 		<div class="logo">
 			<a href="#"><img class='img-responsive'src="images/logo_small.gif" class="logo"></a>
 		</div>	
