--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,8 +49,8 @@
     	<thead class="thead-inverse">
           <tr>
             <th>#</th>
-            <th>Type</th>
-            <th>Model</th>
+            <th>Type/Model</th>
+            
           </tr>
     	</thead>
    		 <tbody>
@@ -63,13 +63,13 @@
           <tr>
             <th scope="row">2</th>
             <td></td>
-            <td></td>
+            
             
           </tr>
           <tr>
             <th scope="row">3</th>
             <td></td>
-            <td></td>
+            
            
           </tr>
    		</tbody>
