--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> GearTracker </title>
+    <title>earTracker </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css'>
     <link rel='stylesheet' href='/stylesheets/style.css'>
   </head>
