--- a/views/usercreationlist.ejs
+++ b/views/usercreationlist.ejs
@@ -2,6 +2,7 @@
 <html>
     <header>
         <% include ../views/partials/header %>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel='stylesheet' href='/stylesheets/emoji.css' />
     </header>
 
