--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,7 +62,8 @@ form {
 
 .page_copy {
     text-align: center;
-	vertical-align: middle;
+	vertical-align: center;
+
 }
 
 .list {
@@ -93,6 +94,11 @@ form {
 .col-md-6 {
 	color: #42b8dd;
 
+}
+
+
+.pull-center {
+	margin-left: 500px;
 }
 
 .table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
