--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -44,7 +44,7 @@
 
 
 	<% if (locals.user) { %>
-		<div id="logreg">
+		<div id="logreg visible-lg-*">
 			<form action="/logout">
 			    <input type="submit" value="Log Out" class="logout">
 			</form>
