--- a/views/usercreationlist.ejs
+++ b/views/usercreationlist.ejs
@@ -9,9 +9,9 @@
 <body>
 
 	<% if (user) { %>
-
+	<div id='userlistpad' class='container'>
 	<h1>User List 1</h1>
-
+	<div>
 	<div class="container">
 	<% userlists.forEach( function(userlist) { %>
 		<% userlist.userlist.forEach(function(gear) { %>
