--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
           
 
         <% instruments.forEach( function( instrument ) { %>
-        	<h6 class="globalList"><%= instrument.type %> <%= instrument.model %> <button class="add">add to user list</button></h6>
+        	<h6 class="globalList"><tr><td><%= instrument.type %> <%= instrument.model %> <button class="add">add to user list</button></td><tr></h6>
         <% }); %>
     </div>
     
@@ -135,6 +135,8 @@
       });
     });
   </script> 
+
+
 
   </div>
   </body>
